Fix track header text alignment

--- a/app/javascript/components/Tracks/Track/Header/styles.module.scss
+++ b/app/javascript/components/Tracks/Track/Header/styles.module.scss
@@ -21,7 +21,7 @@
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: min-content min-content min-content 1fr;
-  align-items: baseline;
+  align-items: center;
 }
 
 .editLink {
